@startuml

skinparam backgroundColor #FFFFFF
skinparam roundcorner 6
skinparam shadowing false
skinparam defaultFontSize 12
skinparam defaultFontName "Helvetica"

skinparam class {
    BackgroundColor<<Entity>>       #DDEEFF
    BorderColor<<Entity>>           #336699
    BackgroundColor<<ValueObject>>  #DDFFDD
    BorderColor<<ValueObject>>      #448833
    BackgroundColor<<Service>>      #FFF3CC
    BorderColor<<Service>>          #997700
    BackgroundColor<<Orchestrator>> #FFE6CC
    BorderColor<<Orchestrator>>     #994400
    ArrowColor                      #444444
    FontColor                       #222222
}

hide empty members
hide stereotypes

' ─── Legend ───────────────────────────────────────────────
legend right
    |<#DDEEFF> E |  Entity         |
    |<#DDFFDD> V |  Value Object   |
    |<#FFF3CC> S |  Service        |
    |<#FFE6CC> O |  Orchestrator   |
endlegend

' ─── Configuration ────────────────────────────────────────
package "Tariff Configuration" #F5F8FF {
    class Plan <<Entity>> {
        id
        prices : Price[]
    }

    class Price <<Entity>> {
        id
        type : Type
        target : Target
        price : Money
        prepaid : Quantity
        modifier : ChargeModifier
    }
}

' ─── Subscriptions ────────────────────────────────────────
package "Subscriptions" #F5FFF5 {
    class Customer <<Entity>> {
        id
        seller : Customer
    }

    class Target <<ValueObject>> {
        id
        type : Type
        name
    }

    class Sale <<Entity>> {
        id
        customer : Customer
        target : Target
        plan : Plan
        time : DateTime
        closeTime : DateTime
    }
}

' ─── Metered Activity ─────────────────────────────────────
package "Metered Activity" #FFFDF0 {
    class Action <<Entity>> {
        id
        type : Type
        target : Target
        quantity : Quantity
        customer : Customer
        time : DateTime
        state : ActionState
        sale : Sale
        parent : Action
    }

    class UsageInterval <<ValueObject>> {
        start : DateTime
        end : DateTime
        ..
        ratioOfMonth() : float
        seconds() : int
        extend(other) : self
    }
}

' ─── Pipeline ─────────────────────────────────────────────
package "Billing Pipeline" #FFF8F0 {
    class Collector <<Service>> {
        collect(source) : Order
    }

    class Calculator <<Service>> {
        calculateOrder(order) : Charge[]
    }

    class Aggregator <<Service>> {
        aggregateCharges(charges) : Bill[]
    }

    class Billing <<Orchestrator>> {
        calculate(source) : Bill[]
        perform(source) : Bill[]
        calculateCharges(source) : Charge[]
    }
}

' ─── Results ──────────────────────────────────────────────
package "Results" #FFF0F5 {
    class Charge <<Entity>> {
        id
        type : Type
        target : Target
        usage : Quantity
        sum : Money
        action : Action
        price : Price
        parent : Charge
    }

    class Bill <<Entity>> {
        id
        type : Type
        target : Target
        sum : Money
        quantity : Quantity
        customer : Customer
        time : DateTime
    }
}

' ─── Value Objects ────────────────────────────────────────
package "Value Objects" #F5FFF5 {
    class Type <<ValueObject>> {
        name
        parent : Type
    }

    class Money <<ValueObject>> {
        amount : int
        currency : Currency
    }

    class Quantity <<ValueObject>> {
        quantity : numeric
        unit : Unit
    }
}

' ─── Relationships ────────────────────────────────────────

' Configuration
Plan "1" *-right- "N" Price
Price -down-> Target
Price -right-> Type

' Subscriptions
Sale -up-> Customer
Sale -up-> Target
Sale -left-> Plan
Customer -up-> Customer : seller

' Activity
Action -up-> Customer
Action -up-> Target
Action -right-> Sale
Action -up-> Action : parent
Action ..> UsageInterval : uses for\npro-rating

' Pipeline flow
Billing -down-> Collector
Billing -down-> Calculator
Billing -down-> Aggregator
Collector ..> Calculator : feeds
Calculator ..> Aggregator : feeds

' Results
Charge -up-> Action
Charge -up-> Price
Charge -left-> Charge : parent
Charge -right-> Bill : aggregated into
Bill -up-> Customer
Bill -up-> Target
Bill -right-> Type

@enduml
